Fix code quality issues: resource leaks, thread leak, ObjectMapper waste, empty catches